# RL-CCA

./: .editorconfig  .gitignore  CITATION.cff  Makefile  README.md  check_env.py  config.py  quick_train_demo.sh  repro.sh  requirements.txt  run_all_tests.sh  validate_repo.sh
core/: action_space.py  board.py  (+4 more)
decomposed_mcts/: .gitignore  README.md  __main__.py  pyproject.toml
decomposed_mcts/experiments/: cmaz_cc_training.py  inference_override_demo.py  train_and_demo_kingmaker.py
decomposed_mcts/src/: __init__.py  cc_adapter.py  cmaz_mcts.py  halma_adapter.py  kingmaker_adapter.py  monotonic_mixer.py  network.py  self_play.py
decomposed_mcts/tests/: test_cc_adapter.py  test_cmaz_mcts.py  test_cmaz_network.py  test_halma_adapter.py  test_kingmaker_adapter.py  test_monotonic_mixer.py  test_public_api.py
equivariant_net/: README.md  __main__.py  pyproject.toml
equivariant_net/experiments/: wreath_cc_training.py
equivariant_net/src/: __init__.py  c6_spatial.py  cc_runner.py  cc_wreath_encoder.py  seat_equivariant.py  wreath_fuse.py  wreath_network.py
equivariant_net/tests/: test_c6_spatial.py  test_cc_runner.py  test_cc_wreath_encoder.py  test_public_api.py  test_seat_equivariant.py  test_wreath_fuse.py  test_wreath_network.py
flagship_coalition_mcts/: .gitignore  README.md  __main__.py  pyproject.toml
flagship_coalition_mcts/experiments/: ablation_ladder.py  cc_self_play_training.py  cc_smoke_test.py  final_evaluation.py  full_integration_demo.py  kingmaker_head_to_head.py  measure_cce_gap.py  pilot_experiment.py  seed_sweep.py  validate_checkpoint.py
(+153 files in other folders)
