[project]
name = "equivariant-net"
version = "0.1.0"
description = "Wreath-equivariant network for star-hex Chinese Checkers"
requires-python = ">=3.10"
authors = []

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
